5.0a4 -> 5.0b1:
    - jbj: relax the current header sanity checks, permit 1Gb headers.
    - jbj: refactor some final \n out of msgs into rpmlog format instead.
    - jbj: add global pgpDigVSFlags, nuke unused pgpDig{Get,Set}VSFlags.
    - jbj: punt on minor issues for beta1.
    - jbj: rpm2cpio: fail http/https transport attempts with error.
    - jbj: install /usr/bin/rpm2cpio executable.
    - jbj: install /usr/lib/rpm/rpm2cpio shell script.
    - jbj: install /usr/lib/rpm/vcheck.
    - jbj: RPMTAG_TRACK tag is being added to srpms.
    - jbj: fix: display canonical "Headeri18ntable" tag name correctly.
    - jbj: pop RPMTAG_TRACK work-in-progress into CVS. push "segfault on HEAD".
    - jbj: stub in Requires: sanitycheck(N) probe. needs to run the script, duh.
    - jbj: drill sanitycheck exec into psmStage() like %verifyscript.
    - jbj: --rebuilddb has too many NOKEY's using rpmnss. use rpmbc in beta1.
    - jbj: fix: rpmbuild --sign needed to test for password entry.
    - jbj: display the rpmlib Version/Timestamp/Vendor markers lest I forget.
    - jbj: macro expand all scriptlet bodies before execution. W00t!
    - jbj: populate RPMTAG_BUILDMACROS. implementation took 6+ years ...
    - jbj: add %sanitycheck scriptlet to packages. more wiring needed todo++.
    - jbj: add %track section/scriptlet. Hmmm, not in *.rpm content yet, todo++.
    - jbj: add RPMTAG_CLASS as one more spec file tag. arbitrary tag next ...
    - jbj: rpmssl.c w DSA is gud enuf to go into beta1 (but disabled/unused).
    - rse: provide --with-name=NAME Autoconf option to allow packagers to "brand" RPM
    - rse: apply all remaining OpenPKG patches -- fully disabled by default under defined(RPM_VENDOR_OPENPKG)
    - jbj: flesh out rpmssl implementation. DSA seems OK, no clue RSA yet.
    - jbj: flesh out rpmgc implementation. stil buggy ...
    - jbj: stub in rpmgc/rpmssl for gcrypt & openssl signature verification.
    - rse: add XAR support to "devtool standalone"